--- a/SSAFIT_Project2/html/home/home.html
+++ b/SSAFIT_Project2/html/home/home.html
@@ -10,6 +10,10 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
   </head>
   <body class="container-fluid">
     <header>
@@ -56,20 +60,30 @@
       </section>
       <section>
         <div>최근 가장 많이 본 영상</div>
-        <div
-          class="bg-primary-subtle shadow p-3 mb-5 bg-body-tertiary rounded"
-        ></div>
+        <div class="bg-primary-subtle shadow p-3 mb-5 bg-body-tertiary rounded">
+          <div class="d-flex">
+            <div id="pre1" class="d-flex align-items-center">
+              <i class="bi bi-backspace-fill"></i>
+            </div>
+            <div id="video1" class="d-flex"></div>
+            <div id="next1" class="d-flex align-items-center">
+              <i class="bi bi-backspace-reverse-fill"></i>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <div>운동 부위 선택</div>
         <div>
-          <button class="rounded btn btn-secondary">전신</button>
-          <button class="rounded btn btn-secondary">상체</button>
-          <button class="rounded btn btn-secondary">하체</button>
-          <button class="rounded btn btn-secondary">복부</button>
+          <button id="body" class="rounded btn btn-secondary">전신</button>
+          <button id="top1" class="rounded btn btn-secondary">상체</button>
+          <button id="bottom" class="rounded btn btn-secondary">하체</button>
+          <button id="abs" class="rounded btn btn-secondary">복부</button>
         </div>
         <div class="bg-primary-subtle shadow p-3 mb-5 bg-body-tertiary rounded">
-          영상 이미지
+          <div class="d-flex">
+            <div id="video2" class="d-flex"></div>
+          </div>
         </div>
       </section>
     </main>
