--- a/SSAFIT_Project2/html/home/home.html
+++ b/SSAFIT_Project2/html/home/home.html
@@ -30,10 +30,20 @@
               >
             </div>
             <div>
-              <a href="#" class="p-1" style="text-decoration: none">회원가입</a>
+              <a
+                href="http://127.0.0.1:5500/html/user/signin.html"
+                class="p-1"
+                style="text-decoration: none"
+                >회원가입</a
+              >
             </div>
             <div>
-              <a href="#" class="p-1" style="text-decoration: none">로그인</a>
+              <a
+                href="http://127.0.0.1:5500/html/user/login.html"
+                class="p-1"
+                style="text-decoration: none"
+                >로그인</a
+              >
             </div>
           </div>
         </div>
