--- a/SSAFIT_Project2/html/user/login.html
+++ b/SSAFIT_Project2/html/user/login.html
@@ -12,13 +12,10 @@
         <form action="#">
             <div class=" d-flex justify-content-center p-3  bg-body-tertiary rounded flex-column" >
                 <input type="text" placeholder="아이디" class="w-auto form-control" />
-                <input type="text" placeholder="이름" class="w-auto form-control"  />
-                <input type="text" placeholder="이메일" class="w-auto form-control"  />
                 <input type="text" placeholder="비밀번호" class="w-auto form-control"  />
-                <input type="text" placeholder="비밀번호 확인" class="w-auto form-control" />
             </div>
             <div class="nav justify-content-center p-3 bg-body-tertiary rounded" >
-                <button type="button" class="btn btn-outline-primary">가입</button>
+                <button type="button" class="btn btn-outline-primary">로그인</button>
                 <button type="button" class="btn btn-outline-danger">취소</button>
             </div>
         </form>
