--- a/SSAFIT_Project2/html/home/home.html
+++ b/SSAFIT_Project2/html/home/home.html
@@ -22,7 +22,12 @@
           <div class="p-2">SSAFIT</div>
           <div class="d-flex justify-content-end ms-auto p-2">
             <div>
-              <a href="#" class="p-1" style="text-decoration: none">HOME</a>
+              <a
+                href="http://127.0.0.1:5500/html/home/home.html"
+                class="p-1"
+                style="text-decoration: none"
+                >HOME</a
+              >
             </div>
             <div>
               <a href="#" class="p-1" style="text-decoration: none"
