--- a/SSAFIT_Project2/html/home/home.html
+++ b/SSAFIT_Project2/html/home/home.html
@@ -4,78 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="../../css/home.css" />
   </head>
   <body class="container-fluid">
-    <header>
+    <header class="mb-3">
       <nav>
-        <div class="d-flex mb-3">
-          <div class="p-2">SSAFIT</div>
+        <div class="d-flex">
+          <div class="p-2 fs-2">SSAFIT</div>
           <div class="d-flex justify-content-end ms-auto p-2">
-            <div>
-              <a
-                href="http://127.0.0.1:5500/html/home/home.html"
-                class="p-1"
-                style="text-decoration: none"
-                >HOME</a
-              >
+            <div class="align-self-center">
+              <a href="http://127.0.0.1:5500/SSAFIT_Project2/html/home/home.html" class="p-1 home" style="text-decoration: none">HOME</a>
             </div>
-            <div>
-              <a href="#" class="p-1" style="text-decoration: none"
-                >헬스장 찾기</a
-              >
+            <div class="align-self-center">
+              <a href="#" class="p-1" style="text-decoration: none">헬스장찾기</a>
             </div>
-            <div>
-              <a
-                href="http://127.0.0.1:5500/html/user/signin.html"
-                class="p-1"
-                style="text-decoration: none"
-                >회원가입</a
-              >
+            <div class="align-self-center">
+              <a href="#" class="p-1 signIn" style="text-decoration: none">회원가입</a>
             </div>
-            <div>
-              <a
-                href="http://127.0.0.1:5500/html/user/login.html"
-                class="p-1"
-                style="text-decoration: none"
-                >로그인</a
-              >
+            <div class="align-self-center">
+              <a href="#" class="p-1 login" style="text-decoration: none">로그인</a>
+            </div>
+            <div class="align-self-center">
+              <a href="#" class="p-1 myPage" style="text-decoration: none">MyPage</a>
+            </div>
+            <div class="align-self-center">
+              <a href="#" class="p-1 logout" style="text-decoration: none">로그아웃</a>
             </div>
           </div>
         </div>
-        <div class="bg-primary-subtle">상단 이미지</div>
+        <!--  -->
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="3000">
+              <img src="../../img/자연1.jpeg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <img src="../../img/자연2.jpeg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <img src="../../img/자연3.jpeg" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <!--  -->
+        <!-- <div class="bg-primary-subtle topImg">상단 이미지</div> -->
       </nav>
     </header>
-    <main>
+    <main class="mx-5">
       <section>
         <div></div>
         <div>
           <form action="#">
-            <div
-              class="nav justify-content-center shadow p-3 mb-5 bg-body-tertiary rounded"
-            >
-              <input
-                type="text"
-                placeholder="운동 제목 검색"
-                class="w-auto"
-                size="70%"
-              />
+            <div class="nav justify-content-center shadow p-3 mb-3 bg-body-tertiary rounded">
+              <input type="text" placeholder="운동 제목 검색" class="w-auto" size="100%" />
             </div>
           </form>
         </div>
       </section>
       <section>
         <div>최근 가장 많이 본 영상</div>
-        <div class="bg-primary-subtle shadow p-3 mb-5 bg-body-tertiary rounded">
+        <div class="bg-primary-subtle shadow p-3 mb-3 bg-body-tertiary rounded">
           <div class="d-flex">
             <div id="pre1" class="d-flex align-items-center">
               <i class="bi bi-backspace-fill"></i>
@@ -89,13 +88,13 @@
       </section>
       <section>
         <div>운동 부위 선택</div>
-        <div>
+        <div class="mb-2">
           <button id="body" class="rounded btn btn-secondary">전신</button>
           <button id="top1" class="rounded btn btn-secondary">상체</button>
           <button id="bottom" class="rounded btn btn-secondary">하체</button>
           <button id="abs" class="rounded btn btn-secondary">복부</button>
         </div>
-        <div class="bg-primary-subtle shadow p-3 mb-5 bg-body-tertiary rounded">
+        <div class="bg-primary-subtle shadow p-3 mb-3 bg-body-tertiary rounded">
           <div class="d-flex">
             <div id="video2" class="d-flex"></div>
           </div>
@@ -103,19 +102,18 @@
       </section>
     </main>
     <footer>
-      <ul class="d-flex p-3 justify-content-around list-unstyled">
-        <li><a href="#" style="text-decoration: none">회사소개</a></li>
-        <li><a href="#" style="text-decoration: none">개인정보처리방칭</a></li>
-        <li><a href="#" style="text-decoration: none">이용약관</a></li>
-        <li><a href="#" style="text-decoration: none">오시는길</a></li>
-        <li><a href="#" style="text-decoration: none">&copy; SSAFY</a></li>
+      <ul class="d-flex p-1 justify-content-center list-unstyled">
+        <li><a class="m-2" href="#" style="text-decoration: none">회사소개</a></li>
+        <li><a class="m-2" href="#" style="text-decoration: none">개인정보처리방칭</a></li>
+        <li><a class="m-2" href="#" style="text-decoration: none">이용약관</a></li>
+        <li><a class="m-2" href="#" style="text-decoration: none">오시는길</a></li>
+        <li><a class="m-2" href="#" style="text-decoration: none">&copy; SSAFY</a></li>
       </ul>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="../../js/header.js"></script>
     <script src="../../js/home.js"></script>
+    <script src="../../js/mypage.js"></script>
+    <script src="../../js/review.js"></script>
   </body>
 </html>
