--- a/SSAFIT_Project2/html/mypage/myPage.html
+++ b/SSAFIT_Project2/html/mypage/myPage.html
@@ -36,55 +36,31 @@
         </div>
       </nav>
     </header>
-    <main class="mx-5">
-      <div class="d-flex justify-content-center fs-3">운동영상 리뷰</div>
-      <hr />
+    <main class="">
       <div class="d-flex justify-content-center">
-        <iframe
-          src="https://www.youtube.com/embed/gMaB-fG4u4g"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-          width="450"
-          height="280"
-        ></iframe>
+        <div class="m-2 userInfo">회원정보 수정</div>
+        <div class="m-2 like">찜영상</div>
+        <div class="m-2 myReview">내가쓴리뷰</div>
+        <div class="m-2 fallow">팔로우</div>
       </div>
       <hr />
-      <div class="d-flex d-flex justify-content-between">
-        <div>
-          <button class="addBtn btn btn-secondary">글 작성</button>
-        </div>
-        <div>
-          <input type="text" placeholder="제목, 내용으로 검색" />
-        </div>
-      </div>
-      <hr />
-      <div class="d-flex">
-        <div style="flex-grow: 1">
-          <div>번호</div>
-          <div>4</div>
-        </div>
-        <div style="flex-grow: 8">
-          <div>제목</div>
-          <div class="d-flex reviewInfo">
-            <div>와~효과만점운동 영상입니다.</div>
-            <button class="btn btn-secondary">상세</button>
+      <section class="userInfo">
+        <form action="#">
+          <div class="d-flex justify-content-center p-3 bg-body-tertiary rounded flex-column">
+            <input type="text" placeholder="아이디" class="w-auto form-control m-1" />
+            <input type="text" placeholder="이름" class="w-auto form-control m-1" />
+            <input type="text" placeholder="이메일" class="w-auto form-control m-1" />
+            <input type="text" placeholder="비밀번호" class="w-auto form-control m-1" />
+            <input type="text" placeholder="비밀번호 확인" class="w-auto form-control m-1" />
           </div>
-        </div>
-        <div style="flex-grow: 2">
-          <div>작성자</div>
-          <div>익명사용자a</div>
-        </div>
-        <div style="flex-grow: 1">
-          <div>조회수</div>
-          <div>0</div>
-        </div>
-        <div style="flex-grow: 2">
-          <div>작성시간</div>
-          <div>20220105 01:32:37</div>
-        </div>
-      </div>
+          <div class="nav justify-content-center p-3 bg-body-tertiary rounded">
+            <button class="btn btn-outline-primary m-2" onclick="window.close()">수정</button>
+          </div>
+        </form>
+      </section>
+      <section class="like"></section>
+      <section class="myReview"></section>
+      <section class="fallow"></section>
     </main>
     <footer>
       <ul class="d-flex p-1 justify-content-center list-unstyled">
@@ -97,6 +73,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="../../js/header.js"></script>
-    <script src="../../js/review.js"></script>
+    <script src="../../js/mypage.js"></script>
   </body>
 </html>
