--- a/SSAFIT_Project2/html/review/reviewEdit.html
+++ b/SSAFIT_Project2/html/review/reviewEdit.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
-<body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  </head>
+  <body>
     <main>
-        <div class="d-flex justify-content-center">운동영상 리뷰</div>
-        <form action="#">
-            <div class=" d-flex justify-content-center p-3  bg-body-tertiary rounded flex-column">
-                <input type="text" placeholder="제목" class="w-auto form-control" size="70%" />
-                <input type="text" placeholder="수정할 내용" class="w-auto form-control" size="70%" style="height: 250px;" />
-            </div>
-            <div class="nav justify-content-center p-3 bg-body-tertiary rounded" >
-                <button type="button" class="btn btn-outline-primary">수정</button>
-                <button type="button" class="btn btn-outline-danger">취소</button>
-            </div>
-        </form>
+      <div class="d-flex justify-content-center">리뷰 수정</div>
+      <form action="#">
+        <div class="d-flex justify-content-center p-3 bg-body-tertiary rounded flex-column">
+          <input type="text" placeholder="제목" class="w-auto form-control" size="70%" />
+          <input type="text" placeholder="수정할 내용" class="w-auto form-control" size="70%" style="height: 250px" />
+        </div>
+        <div class="nav justify-content-center p-3 bg-body-tertiary rounded">
+          <button type="button" class="btn btn-outline-primary" onclick="window.close()">수정</button>
+          <button type="button" class="btn btn-outline-danger" onclick="window.close()">취소</button>
+        </div>
+      </form>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
