--- a/SSAFIT_Project2/html/mypage/myPage.html
+++ b/SSAFIT_Project2/html/mypage/myPage.html
@@ -58,9 +58,84 @@
           </div>
         </form>
       </section>
-      <section class="like"></section>
-      <section class="myReview"></section>
-      <section class="fallow"></section>
+      <section class="like d-flex justify-content-center">
+        <iframe
+          class="m-2"
+          src="https://www.youtube.com/embed/gMaB-fG4u4g"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          class="m-2"
+          src="https://www.youtube.com/embed/swRNeYw1JkY"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          class="m-2"
+          src="https://www.youtube.com/embed/54tTYO-vU2E"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section class="myReview">
+        <div class="d-flex">
+          <div style="flex-grow: 1">
+            <div>번호</div>
+            <div>4</div>
+          </div>
+          <div style="flex-grow: 8">
+            <div>제목</div>
+            <div class="d-flex reviewInfo">
+              <div>와~효과만점운동 영상입니다.</div>
+            </div>
+          </div>
+          <div style="flex-grow: 2">
+            <div>작성자</div>
+            <div>익명사용자a</div>
+          </div>
+          <div style="flex-grow: 1">
+            <div>조회수</div>
+            <div>0</div>
+          </div>
+          <div style="flex-grow: 2">
+            <div>작성시간</div>
+            <div>20220105 01:32:37</div>
+          </div>
+        </div>
+      </section>
+      <section class="fallow d-flex flex-column p-1">
+        <div style="border: 1px solid black; border-radius: 10px; width: 50%">
+          <div>팔로잉(2명)</div>
+          <div class="d-flex">
+            <div><i class="bi bi-emoji-laughing"></i></div>
+            <div class="d-flex" style="flex-grow: 1">김싸피</div>
+            <div class="me-2"><button>취소</button></div>
+          </div>
+          <div class="d-flex">
+            <div><i class="bi bi-emoji-laughing"></i></div>
+            <div class="d-flex" style="flex-grow: 1">박코딩</div>
+            <div class="me-2"><button>취소</button></div>
+          </div>
+        </div>
+        <div style="border: 1px solid black; border-radius: 10px; width: 50%">
+          <div>팔로워(2명)</div>
+          <div class="d-flex">
+            <div><i class="bi bi-emoji-laughing"></i></div>
+            <div>김백준</div>
+          </div>
+          <div class="d-flex">
+            <div><i class="bi bi-emoji-laughing"></i></div>
+            <div>박자바</div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <ul class="d-flex p-1 justify-content-center list-unstyled">
